Fix spelling mistake for alcohol.

--- a/SSD-Alkolq/Pages/AlcoholProduct/Edit.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProduct/Edit.cshtml
@@ -14,31 +14,31 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="AlchoholProduct.ID" />
+            <input type="hidden" asp-for="AlcoholProduct.ID" />
             <div class="form-group">
-                <label asp-for="AlchoholProduct.Name" class="control-label"></label>
-                <input asp-for="AlchoholProduct.Name" class="form-control" />
-                <span asp-validation-for="AlchoholProduct.Name" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.Name" class="control-label"></label>
+                <input asp-for="AlcoholProduct.Name" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AlchoholProduct.Brand" class="control-label"></label>
-                <input asp-for="AlchoholProduct.Brand" class="form-control" />
-                <span asp-validation-for="AlchoholProduct.Brand" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.Brand" class="control-label"></label>
+                <input asp-for="AlcoholProduct.Brand" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.Brand" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AlchoholProduct.Description" class="control-label"></label>
-                <input asp-for="AlchoholProduct.Description" class="form-control" />
-                <span asp-validation-for="AlchoholProduct.Description" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.Description" class="control-label"></label>
+                <input asp-for="AlcoholProduct.Description" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AlchoholProduct.Price" class="control-label"></label>
-                <input asp-for="AlchoholProduct.Price" class="form-control" />
-                <span asp-validation-for="AlchoholProduct.Price" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.Price" class="control-label"></label>
+                <input asp-for="AlcoholProduct.Price" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AlchoholProduct.ListDate" class="control-label"></label>
-                <input asp-for="AlchoholProduct.ListDate" class="form-control" />
-                <span asp-validation-for="AlchoholProduct.ListDate" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.ListDate" class="control-label"></label>
+                <input asp-for="AlcoholProduct.ListDate" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.ListDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
