--- a/SSD-Alkolq/Pages/AlcoholProduct/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProduct/Details.cshtml
@@ -13,38 +13,38 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlchoholProduct.Name)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlchoholProduct.Name)
+            @Html.DisplayFor(model => model.AlcoholProduct.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlchoholProduct.Brand)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.Brand)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlchoholProduct.Brand)
+            @Html.DisplayFor(model => model.AlcoholProduct.Brand)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlchoholProduct.Description)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlchoholProduct.Description)
+            @Html.DisplayFor(model => model.AlcoholProduct.Description)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlchoholProduct.Price)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlchoholProduct.Price)
+            @Html.DisplayFor(model => model.AlcoholProduct.Price)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlchoholProduct.ListDate)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.ListDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlchoholProduct.ListDate)
+            @Html.DisplayFor(model => model.AlcoholProduct.ListDate)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.AlchoholProduct.ID">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
