--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,6 +27,11 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.FullName"></label>
+                <input asp-for="Input.FullName" class="form-control" />
+                <span asp-validation-for="Input.FullName" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
