Fix issue with manage account.

--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<SSD_Alkolq.Models.ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
