Update namespace accordingly.

--- a/SSD-Alkolq/Pages/AlcoholProducts/Delete.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Delete.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SSD_Alkolq.Pages.AlcoholProduct.DeleteModel
+@model SSD_Alkolq.Pages.AlcoholProducts.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
