--- a/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SSD_Alkolq.Pages.AlcoholProduct.EditModel
+@model SSD_Alkolq.Pages.AlcoholProducts.EditModel
 
 @{
     ViewData["Title"] = "Edit";
