--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SSD_Alkolq.Pages.AlcoholProduct.IndexModel
+@model SSD_Alkolq.Pages.AlcoholProducts.IndexModel
 
 @{
     ViewData["Title"] = "Index";
