--- a/SSD-Alkolq/Pages/AlcoholProducts/Create.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SSD_Alkolq.Pages.AlcoholProduct.CreateModel
+@model SSD_Alkolq.Pages.AlcoholProducts.CreateModel
 
 @{
     ViewData["Title"] = "Create";
