--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -1,5 +1,5 @@
 @page
-@model SSD_Alkolq.Pages.AlcoholProduct.DetailsModel
+@model SSD_Alkolq.Pages.AlcoholProducts.DetailsModel
 
 @{
     ViewData["Title"] = "Details";
