--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -17,14 +17,17 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
+                  <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" asp-area="" asp-page="/AlcoholProducts/Index">Products</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                    </li>
+                  </ul>
                 </div>
                 <partial name="_LoginPartial" />
             </div>
