Changed 'Brand' tp 'Type ' in Alcohol Products page

--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -18,7 +18,7 @@
                 @Html.DisplayNameFor(model => model.AlchoholProduct[0].Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Brand)
+                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Type)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AlchoholProduct[0].Description)
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Brand)
+                @Html.DisplayFor(modelItem => item.Type)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
