--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -19,10 +19,10 @@
             @Html.DisplayFor(model => model.AlcoholProduct.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AlcoholProduct.Brand)
+            @Html.DisplayNameFor(model => model.AlcoholProduct.Type)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AlcoholProduct.Brand)
+            @Html.DisplayFor(model => model.AlcoholProduct.Type)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AlcoholProduct.Description)
