--- a/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
@@ -21,9 +21,9 @@
                 <span asp-validation-for="AlcoholProduct.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AlcoholProduct.Brand" class="control-label"></label>
-                <input asp-for="AlcoholProduct.Brand" class="form-control" />
-                <span asp-validation-for="AlcoholProduct.Brand" class="text-danger"></span>
+                <label asp-for="AlcoholProduct.Type" class="control-label"></label>
+                <input asp-for="AlcoholProduct.Type" class="form-control" />
+                <span asp-validation-for="AlcoholProduct.Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AlcoholProduct.Description" class="control-label"></label>
