--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -42,6 +42,9 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AlcoholProduct.ListDate)
         </dd>
+        <dd class="col-sm-10">
+          <img src="~/images/@Model.AlcoholProduct.ImageName" />
+        </dd>
     </dl>
 </div>
 <div>
