--- a/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Edit.cshtml
@@ -12,7 +12,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="AlcoholProduct.ID" />
             <div class="form-group">
@@ -39,6 +39,11 @@
                 <label asp-for="AlcoholProduct.ListDate" class="control-label"></label>
                 <input asp-for="AlcoholProduct.ListDate" class="form-control" />
                 <span asp-validation-for="AlcoholProduct.ListDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
