Fixed alcohol_details.css link

--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -6,13 +6,7 @@
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
 
-@*<head>
-        <link rel="stylesheet" href="~/Pages/CSS/alcohol_details.css">
-    </head>*@
-
-@*@section Styles {
-    <link rel="stylesheet" href="~/Pages/CSS/alcohol_details.css">
-}*@
+<link rel="stylesheet" href="~/css/alcohol_details.css">
 
 <h1>Details</h1>
 
