--- a/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Details.cshtml
@@ -51,6 +51,10 @@
         </div>
     </dl>
 </div>
+<form asp-page-handler="AddToCart" method="post">
+    <input type="hidden" value="@Model.AlcoholProduct.ID" name="id" />
+    <button class="btn btn-primary">Add to Cart</button>
+</form>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.AlcoholProduct.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
