--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -8,41 +8,35 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+  <a asp-page="Create">Create New</a>
 </p>
 <table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ShoppingCartItem[0].UserID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShoppingCartItem[0].AlcoholProduct)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ShoppingCartItem[0].Quantity)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.ShoppingCartItem) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AlcoholProduct.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Quantity)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
+  <thead>
+    <tr>
+      <th>
+        @Html.DisplayNameFor(model => model.ShoppingCart[0].AlcoholProduct)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.ShoppingCart[0].Quantity)
+      </th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    @foreach (var item in Model.ShoppingCart) {
+    <tr>
+      <td>
+        @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
+      </td>
+      <td>
+        @Html.DisplayFor(modelItem => item.Quantity)
+      </td>
+      <td>
+        <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+        <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+        <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+      </td>
+    </tr>
 }
-    </tbody>
+  </tbody>
 </table>
