--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -11,6 +11,17 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
+<form>
+    <p>
+        <select asp-for="AlcoholType" asp-items="Model.Type">
+            <option value="">All</option>
+        </select>
+        Title: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
 <table class="table">
     <thead>
         <tr>
