Created home page + designs

--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -4,7 +4,113 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<head>
+    <link rel="stylesheet" href="~/css/home_page.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="content-wrap">
+        <section id="=header">
+            <div class="row">
+                <div class="home-header">
+                    <h1 class="alkolq-header">Alkolq</h1>
+                    <h2 class="sub-header">Every drop counts, when there is a story in every bottle.</h2>
+                </div>
+            </div>
+        </section>
+        <div></div>
+        <section id="types">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/beer.jpg" alt="beer" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Beer</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/red-wine.jpg" alt="red wine" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Red Wine</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/white-wine.jpg" alt="white wine" class="image">
+                        <div class="overlay">
+                            <div class="text-type">White Wine</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/whisky.jpg" alt="whisky" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Whisky</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/vodka.jpg" alt="vodka" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Vodka</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/brandy.jpg" alt="brandy" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Brandy</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/tequila.jpg" alt="tequila" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Whisky</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/gin.jpg" alt="gin" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Gin</div>
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="col-sm-4">
+                    <div class="types-container">
+                        <img src="~/images/rum.jpg" alt="rum" class="image">
+                        <div class="overlay">
+                            <div class="text-type">Rum</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</body>
