Fixed whisky typo

--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -88,7 +88,7 @@
                     <div class="types-container">
                         <img src="~/images/tequila.jpg" alt="tequila" class="image">
                         <div class="overlay">
-                            <div class="text-type">Whisky</div>
+                            <div class="text-type">Tequila</div>
                         </div>
                     </div>
                 </div>
