--- a/SSD-Alkolq/Pages/AlcoholTypes/Whisky.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholTypes/Whisky.cshtml
@@ -23,7 +23,7 @@
     {
         if (item.Type == "Whisky")
         {
-            <a class="type-card" asp-page="~/AlcoholProducts/Details" asp-route-id="@item.ID">
+            <a class="type-card" asp-page="../AlcoholProducts/Details" asp-route-id="@item.ID">
                 <div class="type-alcoholinfo">
                     <img src="~/images/@item.ImageName" , class="type-alcoholimg" />
                     <p class="type-alcoholname">
