--- a/SSD-Alkolq/Pages/AlcoholTypes/Tequila.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholTypes/Tequila.cshtml
@@ -22,7 +22,7 @@
     {
         if (item.Type == "Tequila")
         {
-            <a class="type-card" asp-page="~/AlcoholProducts/Details" asp-route-id="@item.ID">
+            <a class="type-card" asp-page="../AlcoholProducts/Details" asp-route-id="@item.ID">
                 <div class="type-alcoholinfo">
                     <img src="~/images/@item.ImageName" , class="type-alcoholimg" />
                     <p class="type-alcoholname">
