--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -29,86 +29,104 @@
         <section id="types">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/beer.jpg" alt="beer" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Beer</div>
+                    <a asp-page="./AlcoholTypes/Beer">
+                        <div class="types-container">
+                            <img src="~/images/beer.jpg" alt="beer" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Beer</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/red-wine.jpg" alt="red wine" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Red Wine</div>
+                    <a asp-page="./AlcoholTypes/RedWine">
+                        <div class="types-container">
+                            <img src="~/images/red-wine.jpg" alt="red wine" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Red Wine</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/white-wine.jpg" alt="white wine" class="image">
-                        <div class="overlay">
-                            <div class="text-type">White Wine</div>
+                    <a asp-page="./AlcoholTypes/WhiteWine">
+                        <div class="types-container">
+                            <img src="~/images/white-wine.jpg" alt="white wine" class="image">
+                            <div class="overlay">
+                                <div class="text-type">White Wine</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/whisky.jpg" alt="whisky" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Whisky</div>
+                    <a asp-page="./AlcoholTypes/Whisky">
+                        <div class="types-container">
+                            <img src="~/images/whisky.jpg" alt="whisky" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Whisky</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/vodka.jpg" alt="vodka" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Vodka</div>
+                    <a asp-page="./AlcoholTypes/Vodka">
+                        <div class="types-container">
+                            <img src="~/images/vodka.jpg" alt="vodka" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Vodka</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/brandy.jpg" alt="brandy" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Brandy</div>
+                    <a asp-page="./AlcoholTypes/Brandy">
+                        <div class="types-container">
+                            <img src="~/images/brandy.jpg" alt="brandy" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Brandy</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/tequila.jpg" alt="tequila" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Tequila</div>
+                    <a asp-page="./AlcoholTypes/Tequila">
+                        <div class="types-container">
+                            <img src="~/images/tequila.jpg" alt="tequila" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Tequila</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/gin.jpg" alt="gin" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Gin</div>
+                    <a asp-page="./AlcoholTypes/Gin">
+                        <div class="types-container">
+                            <img src="~/images/gin.jpg" alt="gin" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Gin</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <br />
                 <div class="col-sm-4">
-                    <div class="types-container">
-                        <img src="~/images/rum.jpg" alt="rum" class="image">
-                        <div class="overlay">
-                            <div class="text-type">Rum</div>
+                    <a asp-page="./AlcoholTypes/Rum">
+                        <div class="types-container">
+                            <img src="~/images/rum.jpg" alt="rum" class="image">
+                            <div class="overlay">
+                                <div class="text-type">Rum</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
