--- a/SSD-Alkolq/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -5,3 +5,6 @@
 }
 
 <h1>@ViewData["Title"]</h1>
+<p>
+    Your email has been confirmed. Please <a asp-page="./Login">click here to log in</a>.
+</p>
