--- a/SSD-Alkolq/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,6 +4,17 @@
     ViewData["Title"] = "Register confirmation";
 }
 
+<head>
+    <link rel="stylesheet" href="~/css/register-confirmation.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
+</head>
+
 <h1>@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
