--- a/SSD-Alkolq/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -20,14 +20,13 @@
     if (@Model.DisplayConfirmAccountLink)
     {
 <p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
+    Thank you for registering with us! Please check your email to confirm your account.
 </p>
     }
     else
     {
 <p>
-        Please check your email to confirm your account.
+        Please check your email to confirm your account. 
 </p>
     }
 }
