--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -32,15 +32,15 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="" asp-page="/AlcoholProducts/Index">Products</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Beer">Beer</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/RedWine">Red Wine</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/WhiteWine">White Wine</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Whisky">Whisky</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Vodka">Vodka</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Brandy">Brandy</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Tequila">Tequila</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Gin">Gin</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Rum">Rum</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Beer">Beer</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/RedWine">Red Wine</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/WhiteWine">White Wine</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Whisky">Whisky</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Vodka">Vodka</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Brandy">Brandy</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Tequila">Tequila</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Gin">Gin</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Rum">Rum</a>
                                 </div>
                             </li>
                         </ul>
