--- a/SSD-Alkolq/wwwroot/css/nav-styles.css
+++ b/SSD-Alkolq/wwwroot/css/nav-styles.css
@@ -4,8 +4,8 @@
 }
 
 .navbar-main {
-    font-family: 'Montserrat', sans-serif !important;
-    font-size: 1.1em;
+    font-family: 'Anaheim', sans-serif !important;
+    font-size: 1.4em;
     padding-top: 0.4em;
 }
 
