--- a/SSD-Alkolq/wwwroot/css/register-confirmation.css
+++ b/SSD-Alkolq/wwwroot/css/register-confirmation.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 p {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Anaheim', sans-serif;
     margin-top: 4rem;
     font-size: 1.4rem;
 }
