--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,21 +16,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
 
-<h1>@ViewData["Title"]</h1>
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-        <section>
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <section style="font-family: Anaheim, sans-serif">
             <form id="account" method="post">
                 <h4>Welcome back to Alkolq.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
+                <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                     <label asp-for="Input.Email"></label>
                     <input asp-for="Input.Email" class="form-control" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                     <label asp-for="Input.Password"></label>
                     <input asp-for="Input.Password" class="form-control" />
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -57,7 +56,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
 </div>
 
 @section Scripts {
