--- a/SSD-Alkolq/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SSD-Alkolq/Areas/Identity/Pages/Account/Register.cshtml
@@ -15,31 +15,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
 
-<h1>@ViewData["Title"]</h1>
 
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-3"></div>
+    <div class="col-md-6" style="font-family: Anaheim, sans-serif">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                 <label asp-for="Input.FullName"></label>
                 <input asp-for="Input.FullName" class="form-control" />
                 <span asp-validation-for="Input.FullName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" style= "width:66.6%; margin-left:auto; margin-right:auto">
                 <label asp-for="Input.ConfirmPassword"></label>
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
@@ -47,7 +46,7 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
-    <div class="col-md-4"></div>
+    <div class="col-md-3"></div>
 </div>
 
 @section Scripts {
