--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,400&family=Yeseva+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anaheim&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,18 +30,21 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="../AlcoholProducts/Index">Products</a>
+                            </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="" asp-page="/AlcoholProducts/Index">Products</a>
+                                <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="">Types of Alcohol</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Beer">Beer</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/RedWine">Red Wine</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/WhiteWine">White Wine</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Whisky">Whisky</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Vodka">Vodka</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Brandy">Brandy</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Tequila">Tequila</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Gin">Gin</a>
-                                    <a class="dropdown-item" asp-page="./AlcoholTypes/Rum">Rum</a>
+                                    <a class="dropdown-item" asp-page="../Pages/AlcoholTypes/Beer">Beer</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/RedWine">Red Wine</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/WhiteWine">White Wine</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Whisky">Whisky</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Vodka">Vodka</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Brandy">Brandy</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Tequila">Tequila</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Gin">Gin</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Rum">Rum</a>
                                 </div>
                             </li>
                         </ul>
