Change img size on index

--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
     Layout = "~/Pages/Shared/_Layout.cshtml";
 }
-<link rel="stylesheet" href="~/css/products_index.css">
+<link rel="stylesheet" href="~/css/products-index.css">
 
 <h1 class="index-title">Index</h1>
 
