--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="">Types of Alcohol</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-page="../Pages/AlcoholTypes/Beer">Beer</a>
+                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Beer">Beer</a>
                                     <a class="dropdown-item" asp-page="../AlcoholTypes/RedWine">Red Wine</a>
                                     <a class="dropdown-item" asp-page="../AlcoholTypes/WhiteWine">White Wine</a>
                                     <a class="dropdown-item" asp-page="../AlcoholTypes/Whisky">Whisky</a>
