--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -40,3 +40,13 @@
 }
   </tbody>
 </table>
+
+<form asp-page-handler="AddToCart" method="post">
+    <label>Buy now!</label>
+    <script src="https://checkout.stripe.com/v3/checkout.js"
+            class="stripe-button"
+            data-key="@Model._stripeOptions.PublishableKey"
+            data-description="Pay for your alcohol."
+            data.amount="500">
+    </script>
+</form>
