--- a/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
+++ b/SSD-Alkolq/Pages/ShoppingCart/Index.cshtml
@@ -14,16 +14,16 @@
   <thead>
     <tr>
       <th>
-        @Html.DisplayNameFor(model => model.ShoppingCart[0].AlcoholProduct)
+        @Html.DisplayNameFor(model => model.ShoppingCartItems[0].AlcoholProduct)
       </th>
       <th>
-        @Html.DisplayNameFor(model => model.ShoppingCart[0].Quantity)
+        @Html.DisplayNameFor(model => model.ShoppingCartItems[0].Quantity)
       </th>
       <th></th>
     </tr>
   </thead>
   <tbody>
-    @foreach (var item in Model.ShoppingCart) {
+    @foreach (var item in Model.ShoppingCartItems) {
     <tr>
       <td>
         @Html.DisplayFor(modelItem => item.AlcoholProduct.Name)
@@ -40,3 +40,7 @@
 }
   </tbody>
 </table>
+
+<form asp-page-handler="AddToCart" method="POST">
+    <button type="submit">Checkout</button>
+</form>
