--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -28,23 +28,20 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="../AlcoholProducts/Index">Products</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/AlcoholProducts/Index">Products</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" asp-area="">Types of Alcohol</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Beer">Beer</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/RedWine">Red Wine</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/WhiteWine">White Wine</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Whisky">Whisky</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Vodka">Vodka</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Brandy">Brandy</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Tequila">Tequila</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Gin">Gin</a>
-                                    <a class="dropdown-item" asp-page="../AlcoholTypes/Rum">Rum</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Beer">Beer</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/RedWine">Red Wine</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/WhiteWine">White Wine</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Whisky">Whisky</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Vodka">Vodka</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Brandy">Brandy</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Tequila">Tequila</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Gin">Gin</a>
+                                    <a class="dropdown-item" asp-page="/AlcoholTypes/Rum">Rum</a>
                                 </div>
                             </li>
                         </ul>
