--- a/SSD-Alkolq/Pages/Shared/_Layout.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                        <ul class="navbar-nav flex-grow-1">
+                        <partial name="_LoginPartial" />
+                        <ul class="navbar-nav mr-auto">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/AlcoholProducts/Index">Products</a>
                             </li>
@@ -46,7 +47,6 @@
                             </li>
                         </ul>
                     </div>
-                    <partial name="_LoginPartial" />
                 </div>
             </nav>
         </div>
