--- a/SSD-Alkolq/Pages/Shared/_LoginPartial.cshtml
+++ b/SSD-Alkolq/Pages/Shared/_LoginPartial.cshtml
@@ -4,8 +4,7 @@
 @inject UserManager<ApplicationUser> UserManager
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new
-{ area = "" })" method="post" id="logoutForm" class="navbar-right">
+    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
                 <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index"
@@ -19,7 +18,7 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="navbar-nav navbar-right">
         <li>
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
         </li>
