Fix home page css.

--- a/SSD-Alkolq/Pages/Index.cshtml
+++ b/SSD-Alkolq/Pages/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="content-wrap">
         <section id="=header">
             <div class="row">
-                <div class="home-header">
+                <div class="col-sm-12">
                     <h1 class="alkolq-header">Alkolq</h1>
                     <h2 class="sub-header">Every drop counts, when there is a story in every bottle.</h2>
                 </div>
