--- a/SSD-Alkolq/wwwroot/css/site.css
+++ b/SSD-Alkolq/wwwroot/css/site.css
@@ -59,9 +59,14 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
+main {
+    font-family: 'Anaheim', sans-serif;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
