--- a/SSD-Alkolq/Pages/AlcoholProducts/Types.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Types.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = Model.TypeName;
 }
 
-<link rel="stylesheet" href="~/css/alcohol_type.css">
+<link rel="stylesheet" href="~/css/alcohol-products.css">
 
 <section id="main">
     <h1 class="type-title">@Model.ProductType.Name</h1>
