--- a/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
+++ b/SSD-Alkolq/Pages/AlcoholProducts/Index.cshtml
@@ -1,77 +1,42 @@
-@page
+﻿@page
 @model SSD_Alkolq.Pages.AlcoholProducts.IndexModel
-
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Pages/Shared/_Layout.cshtml";
 }
-<link rel="stylesheet" href="~/css/products-index.css">
 
-<h1 class="index-title">Index</h1>
+<link rel="stylesheet" href="~/css/alcohol-products.css">
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
+<h1 class="type-title mb-3">Products</h1>
 
-<form>
-    <p>
-        <select asp-for="AlcoholType" asp-items="Model.Type">
-            <option value="">All</option>
-        </select>
-        Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Filter" />
-    </p>
+<form class="m-4">
+    <div class="form-row align-items-center justify-content-center">
+        <div class="col-sm-3 my-1">
+            <select asp-for="AlcoholType" asp-items="Model.Type" class="custom-select">
+                <option value="" selected>All</option>
+            </select>
+        </div>
+        <div class="col-sm-6 my-1">
+            <label class="sr-only" for="search">Search</label>
+            <input type="text" class="form-control" id="search" asp-for="SearchString" placeholder="Search">
+        </div>
+        <div class="col-auto my-1">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-search"></i></button>
+        </div>
+    </div>
 </form>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].ImageName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AlchoholProduct[0].Price)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.AlchoholProduct)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <img src="~/images/@item.ImageName" , class="index-img" />
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Type)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ListDate)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
+<div class="row hidden-md-up">
+    @foreach (var item in Model.AlcoholProducts)
+    {
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <a asp-page="./Details" asp-route-id="@item.ID">
+                    <img class="card-img-top card-image m-2" src="~/images/@item.ImageName" alt="Card image cap" />
+                    <div class="card-body">
+                        <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
+                        <p class="card-text type-alcoholprice">$@Html.DisplayFor(modelItem => item.Price)</p>
+                    </div>
+                </a>
+            </div>
+        </div>
         }
-    </tbody>
-</table>
+</div>
