--- a/SSD-Alkolq/wwwroot/css/alcohol-products.css
+++ b/SSD-Alkolq/wwwroot/css/alcohol-products.css
@@ -4,6 +4,12 @@
     font-size: 50px;
     text-align: center;
 }
+
+.card-image {
+    height: 16rem;
+    object-fit: contain;
+}
+
 .type-image {
     display: block;
     margin-left: auto;
@@ -53,5 +59,4 @@
 .type-alcoholprice {
     font-family: 'Anaheim', sans-serif;
     font-size: 35px;
-    margin-top: 30px;
 }
